Some more types and swagger.
